Remove unnesesary runtime charset search
Use StandardCharsets.UTF_8 instead of "UTF-8" string. This removes necessity to throw a checked exception.